<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlusActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D8D8D8"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/amiko_bold"
                    android:text="회원 추가하기"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/plususerdataBtn"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="230dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#00ff0000"
                    android:fontFamily="@font/amiko_bold"
                    android:text="@string/save"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amiko_bold"
                android:text="기본 정보(필수)"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_design"
                android:ems="10"
                android:hint="@string/plusname"
                android:inputType="textNoSuggestions|textPersonName" />

            <EditText
                android:id="@+id/uage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_design"
                android:ems="10"
                android:hint="@string/plusage"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/usex"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_design"
                android:ems="10"
                android:hint="@string/plussex"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/uheight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_design"
                android:ems="10"
                android:hint="@string/plusheight"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/uweight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_design"
                android:ems="10"
                android:hint="@string/plusweight"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/umuscle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_design"
                android:ems="10"
                android:hint="@string/plusmuscle"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/ufat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_design"
                android:ems="10"
                android:hint="@string/plusfat"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/amiko_bold"
                android:text="주의 사항"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/warning"
                android:textAlignment="textStart" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>