<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/plusBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_design1"
        android:fontFamily="@font/belgrano"
        android:text="@string/plus"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_main_list"
        app:layout_constraintEnd_toStartOf="@+id/restoreBtn"
        app:layout_constraintStart_toEndOf="@+id/entireBtn"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plusBtn">

    </androidx.recyclerview.widget.RecyclerView>

        <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/plusBtn"
        app:layout_constraintTop_toBottomOf="@+id/searchtext"
        tools:layout_editor_absoluteX="-30dp" />

    <EditText
        android:id="@+id/searchtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:fontFamily="@font/belgrano"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:textColorHighlight="#000000"
        android:textColorLink="#0B0A0A"
        app:layout_constraintBottom_toTopOf="@+id/plusBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/entireBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/entireBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design1"
        android:fontFamily="@font/belgrano"
        android:text="@string/entire"
        android:textSize="17dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/plusBtn"
        app:layout_constraintEnd_toStartOf="@+id/plusBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/plusBtn"
        app:layout_constraintEnd_toStartOf="@+id/searchtext"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toEndOf="@+id/entireBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/baseline_search_black_18dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/belgrano"
        android:text="회원찾기"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/searchtext"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/restoreBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_design1"
        android:fontFamily="@font/belgrano"
        android:text="@string/re"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_main_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plusBtn"
        app:layout_constraintTop_toBottomOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>