<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExPlusActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/amiko_bold"
                    android:text="운동 추가하기"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/ulaBtn"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="230dp"
                    android:layout_marginTop="10dp"
                    android:background="#00ff0000"
                    android:fontFamily="@font/amiko_bold"
                    android:text="저장"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/amiko_bold"
                android:text="* 부위, 운동 새로 추가하기 (기존 항목에 없는 경우)"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/newparttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/newpart"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/newextext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/newexplus"
                android:inputType="textPersonName" />

            <View
                android:id="@+id/view9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/amiko_bold"
                android:text="운동 부위 선택(기존 항목에 있는 경우)"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/ulaspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/spinner_design" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/amiko_bold"
                android:text="운동 선택"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/exdataspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/spinner_design" />

            <EditText
                android:id="@+id/newextext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/newexplus2"
                android:inputType="textPersonName" />

            <View
                android:id="@+id/view10"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/amiko_bold"
                android:text="운동 상세 정보 입력"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/exdesedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/explus"
                android:inputType="textPersonName" />

            <View
                android:id="@+id/view11"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/warning2"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>